force-app/main/default/objects/WebsiteListingFavorite__c/WebsiteListingFavorite__c.object-meta.xml
<CustomObject>
    <label>Website Favorite</label>
    <nameField>
        <label>Website Favorite</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Website Favorites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>