force-app/main/default/objects/WebsiteListingFavorite__c/fields/ExternalUpdatedDate__c.field-meta.xml
<CustomField>
    <fullName>ExternalUpdatedDate__c</fullName>
    <label>Date Updated on Website</label>
    <type>DateTime</type>
</CustomField>