force-app/main/default/objects/WebsiteListingFavorite__c/fields/Listing_hz__c.field-meta.xml
<CustomField>
    <fullName>Listing_hz__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Listing</label>
    <referenceTo>Listing_hz__c</referenceTo>
    <relationshipLabel>Website Favorites</relationshipLabel>
    <relationshipName>WebsiteListingFavorites</relationshipName>
    <type>Lookup</type>
</CustomField>